<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Simply Do</string>
<string name="settings_title">Settings</string>
<string-array name="itemSortingEntries">
<item>None</item>
<item>Starred First</item>
<item>Active First</item>
</string-array>
<string-array name="itemSortingValues">
<item>none</item>
<item>starred</item>
...
<string name="deleteInactiveTitle">Delete Inactive?</string>
<string name="deleteInactiveMessage">Are you sure you want to delete all inactive items in this list?</string>
<string name="deleteInactivePositive">Yes</string>
<string name="deleteInactiveNegative">No</string>

<string name="moveToTitle">Move To</string>
<string name="moveToPositive">OK</string>
<string name="moveToNegative">Cancel</string>
<string name="moveToMoved">Item %1$s moved to %2$s</string>

<string name="restoreWarnTitle">Restore database</string>
<string name="restoreWarnMessage">This will overwrite all the existing lists and items. Continue?</string>
<string name="restoreWarnPositive">Yes</string>
...
